--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import '~ngx-toastr/toastr';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Acme|Anton|Cabin+Sketch|Covered+By+Your+Grace|Homemade+Apple|Lalezar|Lato:100,300,300i,700,900|Raleway:200,300,300i,400,600,700|Special+Elite|VT323');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 h1,h2,h3,h4,h5,h6{
     font-family: 'Roboto', sans-serif;
